--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,11 +3,18 @@
     <head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!--JavaScripts-->
 		<script src="JS/Scripts.js"></script>
 		<title>Angela Morales</title>
+	<!--Estilos-->
 		<link rel="stylesheet" href="CSS/index.css"/>
 		<link rel="stylesheet" href="CSS/menu.css"/>
+		
+		<link rel="stylesheet" href="CSS/portada.css"/>
 
+		<link rel="stylesheet" href="CSS/presentacion.css"/>
+		<link rel="stylesheet" href="CSS/info.css"/>
+	<!--Tipografías-->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -24,14 +31,15 @@
 			</nav>
 
 		</header>
-		<section class="portada" id="portada">
+		<section class="portada Show" id="portada">
 			<h2 id="presentacion">Angela Morales | PORTFOLIO</h2>
 		</section>
 
-		<section id="Information">
+		<section class="Information" id="Information">
 			<div class="Info_menu" id="Presentation">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<p class="Myself" id="">
+					Nací en 2001 en Ciudad de México, Mexico.
+					Creo que la programación y el desarrollo web son otra forma del arte.
 				</p>
 			</div>
 			<div class="Info_menu" id="Catalogo">
@@ -50,20 +58,26 @@
 				
 			</div>
 			<div class="Info_menu" id="Info_Contact">
-				<a class="contact" id="social_medias">
-					<img src="IMG/linkedin.svg" alt="LinkedIn">
-				</a>
+				<div class="redes_sociales">
+					<div id="social_medias">
+						<a href="https://www.linkedin.com/in/angela-magali-morales-alva-978170266" target="_blank" class="LinkedIn">
+							<img src="IMG/linkedin.svg" alt="Perfil de LinkedInde Angela Magali Morales Alva">
+						</a>
+					</div>
+				</div>
+				
 			</div>
 			<div class="Info_menu" id="FAQs">
 				<div class="faqs">
 					<h2 class="Titulo_projecto">(Questions)</h2>
-					<p class="Answers">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p class="Answers">Lorem ipsum dolor sit amet.</p>
 				</div>
 				<div class="faqs">
 					<h2 class="Titulo_projecto">(Questions)</h2>
-					<p class="Answers">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p class="Answers">Lorem ipsum dolor sit amet.</p>
 				</div>
 			</div>
 		</section>
+		<footer>© 2025 Angela Morales | Developer</footer>
     </body>
 </html>
